2012-04-20  Joseph Myers  <joseph@codesourcery.com>

	* sysdeps/unix/fxstat.c: Remove file.
	* sysdeps/unix/xstat.c: Likewise.
	* sysdeps/unix/syscalls.list (sys_fstat, sys_stat): Remove.

	* sysdeps/unix/sysv/sigaction.c: Remove file.

	* sysdeps/unix/sysv/Makefile [termio.h not in sysdep_headers]
	(sysdep_headers): Remove variable.
	[termio.h not in sysdep_headers] (generated): Likewise.
	[termio.h not in sysdep_headers] ($(objpfx)termio.h): Remove rule.
	* sysdeps/unix/sysv/sysv_termio.h: Remove file.
	* sysdeps/unix/sysv/tcdrain.c: Likewise.
	* sysdeps/unix/sysv/tcflow.c: Likewise.
	* sysdeps/unix/sysv/tcflush.c: Likewise.
	* sysdeps/unix/sysv/tcgetattr.c: Likewise.
	* sysdeps/unix/sysv/tcgetpgrp.c: Likewise.
	* sysdeps/unix/sysv/tcsendbrk.c: Likewise.
	* sysdeps/unix/sysv/tcsetattr.c: Likewise.
	* sysdeps/unix/sysv/tcsetpgrp.c: Likewise.

	* sysdeps/unix/siglist.c: Remove file.

	* sysdeps/unix/getppid.S: Remove file.

	* sysdeps/unix/mkdir.c: Remove file.
	* sysdeps/unix/rmdir.c: Likewise.

2012-04-19  Andreas Schwab  <schwab@linux-m68k.org>

	* sysdeps/gnu/errlist-compat.awk (END): Correct computation of
	ERR_MAX value.
	* sysdeps/unix/sysv/linux/Versions (GLIBC_2.12): Adjust
	errlist-compat value.

2012-04-18  David S. Miller  <davem@davemloft.net>

	* sysdeps/generic/memcopy.h (reg_char): Delete.
	* debug/strcat_chk.c: Use char, not reg_char.
	* debug/strcpy_chk.c: Likewise.
	* debug/strncat_chk.c: Likewise.
	* debug/strncpy_chk.c: Likewise.
	* string/memchr.c: Likewise.
	* string/memrchr.c: Likewise.
	* string/rawmemchr.c: Likewise.
	* string/strcat.c: Likewise.
	* string/strchr.c: Likewise.
	* string/strchrnul.c: Likewise.
	* string/strcmp.c: Likewise.
	* string/strcpy.c: Likewise.
	* string/strncat.c: Likewise.
	* string/strncmp.c: Likewise.
	* string/strncpy.c: Likewise.

2012-04-18  Will Schmidt  <will_schmidt@vnet.ibm.com>

	* sysdeps/powerpc/memmove.c: New file based on string/memmove.c where