@@ -1,29 +1,0 @@
-/* Copyright (C) 1991,92,96,97,2002, 2003 Free Software Foundation, Inc.
-   This file is part of the GNU C Library.
-
-   The GNU C Library is free software; you can redistribute it and/or
-   modify it under the terms of the GNU Lesser General Public
-   License as published by the Free Software Foundation; either
-   version 2.1 of the License, or (at your option) any later version.
-
-   The GNU C Library is distributed in the hope that it will be useful,
-   but WITHOUT ANY WARRANTY; without even the implied warranty of
-   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
-   Lesser General Public License for more details.
-
-   You should have received a copy of the GNU Lesser General Public
-   License along with the GNU C Library; if not, see
-   <http://www.gnu.org/licenses/>.  */
-
-#include <sysdep.h>
-#include <asm-syntax.h>
-
-PSEUDO_NOERRNO (time, time, 1)
-	movl 4(%esp), %edx	/* Put passed pointer in %edx.  */
-	testl %edx, %edx	/* Is it non-nil?  */
-	je L(null)
-	movl %eax, (%edx)	/* Yes; store the time there.  */
-L(null):
-	ret
-PSEUDO_END_NOERRNO (time)
-libc_hidden_def (time)
