@@ -1,5 +1,7 @@
 2012-04-20  Joseph Myers  <joseph@codesourcery.com>
 
+	* sysdeps/unix/sysv/i386/time.S: Remove file.
+
 	* sysdeps/unix/fxstat.c: Remove file.
 	* sysdeps/unix/xstat.c: Likewise.
 	* sysdeps/unix/syscalls.list (sys_fstat, sys_stat): Remove.
